SubVersion: $Id$

To do: 
	- USB pass-thru support
	- bug with API mode (Linux & Windows): may not work with some calcs ?!
	- ioports.c to improve

Log:

- 17/04/2004, version 3.8.2: roms
	Bug in lib-usb support: wrong timeout passed to libusb (1/10 of
	value) => short timeout !
	Discovered the same bug in tipar/tiser/tiusb kernel module !

	Note: USB support default behaviour is: BUFFERED_R=1 & BUFFERED_W=0.
	Using BUFFERED_W make FLASH sending faster but communication is less 
	reliable.
	
- 08/04/2004, version 3.8.1: roms
	Redirection of stdout/stderr.
	Weird: we were using tilp/ticable.h. It should be linux/ticable.h.
	In fact, modules use tilp/ but built-in uses linux/.
	Modules will be modified to linux/.
	
- 22/03/2004, version 3.8.0: roms
	Splitted sources according to target and cables.
	Tested under Linux with:
	- GreyLink: api: ok
	- BlackLink: asm: ok, ioctl: ok, module: ?? 
	- SilverLink: ioctl: ok, module: ok
	- Parallel: asm: ??, module: ??
	Wake-up sequence removed from serial & parallel cables because it 
	perturbates communication start-up.
	
	Beware: Mac OS-X support has been moved to the new architecture but 
	has not been compiled !!!

	Bug in serial link support (mode asm: no timeout on ser_get).
	Bug in parallel link support (mode asm: no timeout on par_get).

	Added ability to immediately flush log file to disk.
	
- 01/03/2004, version 3.7.9: tijl
	BSD usb fix in libticables

- 01/10/2003, version 3.7.8: tijl
	Added INTLLIBS to LDFLAGS in configure.in
	Fix error messages in src/slv_link.c
	Fix compile error in src/intrface.c

- 27/08/2003, version 3.7.7: jb
	Upgraded to libtool 1.5
	Upgraded to automake 1.7
	Use AM_MAINTAINER_MODE

- 21/04/2003, version 3.7.6: roms
        logging support added into the second serial link support.

- 20/04/2003, version 3.7.5b: roms
        porttalk.c added in EXTRA_DIST for po compilation.
	
- 10/04/2003, version 3.7.5: roms
	Tijl's patch merged.
	
- 29/03/2003, version 3.7.4: roms
	i18n updated.