@@ -10,7 +10,7 @@ AC_INIT(src/intrface.c)
 # set library version number
 MAJOR_VERSION=3
 MINOR_VERSION=8
-MICRO_VERSION=1
+MICRO_VERSION=3
 VERSION=$MAJOR_VERSION.$MINOR_VERSION.$MICRO_VERSION
 
 AC_SUBST(MAJOR_VERSION)
